; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/extr_drm_edid.c_drm_gtf2_m.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/extr_drm_edid.c_drm_gtf2_m.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.edid = type { i32 }

@find_gtf2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.edid*)* @drm_gtf2_m to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @drm_gtf2_m(%struct.edid* %0) #0 {
  %2 = alloca %struct.edid*, align 8
  %3 = alloca i32*, align 8
  store %struct.edid* %0, %struct.edid** %2, align 8
  store i32* null, i32** %3, align 8
  %4 = load %struct.edid*, %struct.edid** %2, align 8
  %5 = bitcast %struct.edid* %4 to i32*
  %6 = load i32, i32* @find_gtf2, align 4
  %7 = call i32 @drm_for_each_detailed_block(i32* %5, i32 %6, i32** %3)
  %8 = load i32*, i32** %3, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %19

10:                                               ; preds = %1
  %11 = load i32*, i32** %3, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 15
  %13 = load i32, i32* %12, align 4
  %14 = shl i32 %13, 8
  %15 = load i32*, i32** %3, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 14
  %17 = load i32, i32* %16, align 4
  %18 = add nsw i32 %14, %17
  br label %20

19:                                               ; preds = %1
  br label %20

20:                                               ; preds = %19, %10
  %21 = phi i32 [ %18, %10 ], [ 0, %19 ]
  ret i32 %21
}

declare dso_local i32 @drm_for_each_detailed_block(i32*, i32, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
